==> mtc4/weather-station-lpc/src/oled.c <==
#include "oled.h"

void OLED_Write_Byte(uint8_t chData, uint8_t chCmd)
{
	__OLED_CS_CLR();

	if (chCmd) {
		__OLED_DC_SET();
	} else {
		__OLED_DC_CLR();
	}
	while(!Chip_SSP_GetStatus(LPC_SSP1, SSP_STAT_TNF)); //TX FIFO not FULL
	Chip_SSP_SendFrame(LPC_SSP1, chData);
	while(Chip_SSP_GetStatus(LPC_SSP1, SSP_STAT_BSY)); //TX BUSY

	__OLED_DC_SET();
	__OLED_CS_SET();
}

void OLED_Clear_Screen(uint8_t chFill)
{
	for (uint8_t i = 0; i < 8; i ++) {
		OLED_Write_Byte(0xB0 + i, OLED_CMD);
		__SET_COL_START_ADDR();
		for (uint8_t j = 0; j < OLED_WIDTH; j ++) {
			s_chDispalyBuffer[j][i] = chFill;
		}
	}
}

void OLED_Puts(uint8_t x, uint8_t y, char *text)
{
	uint8_t i,j=0;
	char c;

	while(text[j])
	{
		c=text[j]-32;
		for (i = 0; i < 5; i ++) {
			s_chDispalyBuffer[x+i+(6*j)][y] = FontSystem5x8[5*c+i];
		}
		s_chDispalyBuffer[x+i+(6*j)][y]=0;
		j++;
	}
}

void OLED_Init(void)
{
	Chip_GPIO_WriteDirBit(LPC_GPIO_PORT, OLED_CS_GPIO,  OLED_CS_PIN,  true);
	Chip_GPIO_WriteDirBit(LPC_GPIO_PORT, OLED_RES_GPIO, OLED_RES_PIN, true);
	Chip_GPIO_WriteDirBit(LPC_GPIO_PORT, OLED_DC_GPIO,  OLED_DC_PIN,  true);

	Chip_IOCON_PinMuxSet(LPC_IOCON, 1, 20, (IOCON_FUNC2 | IOCON_MODE_PULLUP)); /* PIO1_20 connected to SCK1 */
	Chip_IOCON_PinMuxSet(LPC_IOCON, 1, 22, (IOCON_FUNC2 | IOCON_MODE_PULLUP)); /* PIO1_22 connected to MOSI1 */

	Chip_SSP_Init(LPC_SSP);
	Chip_SSP_SetMaster(LPC_SSP, 1);
	Chip_SSP_SetClockRate(LPC_SSP, 0, 2);
	Chip_SSP_SetFormat(LPC_SSP, SSP_BITS_8, SSP_FRAMEFORMAT_SPI, SSP_CLOCK_CPHA1_CPOL1);
	Chip_SSP_Enable(LPC_SSP);

	__OLED_CS_SET();   //CS set
	__OLED_DC_CLR();   //D/C reset
	__OLED_RES_SET();  //RES set

#if defined(SSD_1306)
	OLED_Write_Byte(0xAE, OLED_CMD);//--turn off oled panel
	OLED_Write_Byte(0x00, OLED_CMD);//--set low column address
	OLED_Write_Byte(0x10, OLED_CMD);//--set high column address
	OLED_Write_Byte(0x40, OLED_CMD);//--set start line address  Set Mapping RAM Display Start Line (0x00~0x3F)
	OLED_Write_Byte(0x20, OLED_CMD);//-Set Page Addressing Mode (0x00/0x01/0x02)
	OLED_Write_Byte(0x02, OLED_CMD);//
	OLED_Write_Byte(0x81, OLED_CMD);//--set contrast control register
	OLED_Write_Byte(0xCF, OLED_CMD);//--set SEG Output Current Brightness
	OLED_Write_Byte(0xA1, OLED_CMD);//--set SEG/Column Mapping
	OLED_Write_Byte(0xC8, OLED_CMD);//--set COM/Row Scan Direction (C0h / C8h)
	OLED_Write_Byte(0xA6, OLED_CMD);//--set normal display
	OLED_Write_Byte(0xA8, OLED_CMD);//--set multiplex ratio(1 to 64)
	OLED_Write_Byte(0x3F, OLED_CMD);//--set 1/64 duty
	OLED_Write_Byte(0xD3, OLED_CMD);//--set display offset	Shift Mapping RAM Counter (0x00~0x3F)
	OLED_Write_Byte(0x00, OLED_CMD);//-not offset
	OLED_Write_Byte(0xD5, OLED_CMD);//--set display clock divide ratio/oscillator frequency
	OLED_Write_Byte(0x80, OLED_CMD);//--set divide ratio, Set Clock as 100 Frames/Sec
	OLED_Write_Byte(0xD9, OLED_CMD);//--set pre-charge period
	OLED_Write_Byte(0xF1, OLED_CMD);//--set Pre-Charge as 15 Clocks & Discharge as 1 Clock
	OLED_Write_Byte(0xDA, OLED_CMD);//--set com pins hardware configuration
	OLED_Write_Byte(0x12, OLED_CMD);
	OLED_Write_Byte(0xDB, OLED_CMD);//--set vcomh
	OLED_Write_Byte(0x40, OLED_CMD);//--set VCOM Deselect Level
	OLED_Write_Byte(0x8D, OLED_CMD);//--set Charge Pump enable/disable
	OLED_Write_Byte(0x14, OLED_CMD);//--set(0x10) disable
	OLED_Write_Byte(0xA4, OLED_CMD);// Disable Entire Display On (0xa4/0xa5)
	OLED_Write_Byte(0xA6, OLED_CMD);// Disable Inverse Display On (0xa6/a7)
	OLED_Write_Byte(0xAF, OLED_CMD);//--turn on oled panel
#endif

#if defined(SH_1106)
	OLED_Write_Byte(0xAE, OLED_CMD);//--turn off oled panel
	OLED_Write_Byte(0x02, OLED_CMD);//--set low column address
	OLED_Write_Byte(0x10, OLED_CMD);//--set high column address
	OLED_Write_Byte(0x40, OLED_CMD);//--set start line address  Set Mapping RAM Display Start Line (0x00~0x3F)
	OLED_Write_Byte(0xB0, OLED_CMD);//--set page address
	OLED_Write_Byte(0x81, OLED_CMD);//--set contrast control register
	OLED_Write_Byte(0xFF, OLED_CMD);//--set SEG Output Current Brightness
	OLED_Write_Byte(0xA1, OLED_CMD);//--set SEG/Column Mapping
	OLED_Write_Byte(0xC8, OLED_CMD);//--set COM/Row Scan Direction (C0h / C8h)
	OLED_Write_Byte(0xA8, OLED_CMD);//--set multiplex ratio(1 to 64)
	OLED_Write_Byte(0x3F, OLED_CMD);//--set 1/64 duty
	OLED_Write_Byte(0xD3, OLED_CMD);//--set display offset	Shift Mapping RAM Counter (0x00~0x3F)
	OLED_Write_Byte(0x00, OLED_CMD);//-not offset
	OLED_Write_Byte(0xD5, OLED_CMD);//--set display clock divide ratio/oscillator frequency
	OLED_Write_Byte(0x80, OLED_CMD);//--set divide ratio, Set Clock as 100 Frames/Sec
	OLED_Write_Byte(0xD9, OLED_CMD);//--set pre-charge period
	OLED_Write_Byte(0x1F, OLED_CMD);//--set Pre-Charge as 15 Clocks & Discharge as 1 Clock
	OLED_Write_Byte(0xDA, OLED_CMD);//--set com pins hardware configuration
	OLED_Write_Byte(0x12, OLED_CMD);
	OLED_Write_Byte(0xDB, OLED_CMD);//--set vcomh
	OLED_Write_Byte(0x40, OLED_CMD);//--set VCOM Deselect Level
	OLED_Write_Byte(0xAD, OLED_CMD);//--set Charge Pump enable/disable
	OLED_Write_Byte(0x8B, OLED_CMD);//--set external VCC
	OLED_Write_Byte(0xAF, OLED_CMD);//--turn on oled panel
#endif

	OLED_Clear_Screen(0x00);
}
