==> oliwier509/Fourier-transform-violin-tuner/source/oled.c <==
#include "oled.h"

static void OLED_Write_Byte(uint8_t data, uint8_t cmd) {


	cmd_buff[0] = cmd ? 0x40 : 0x80;
	cmd_buff[1] = data;
	size_t txCount = 0xFFU;

	/* Send master blocking data to slave */
	if (kStatus_Success == LPI2C_MasterStart(I2C_base, I2C_MASTER_SLAVE_ADDR_7BIT, kLPI2C_Write))
	{
		do {
			LPI2C_MasterGetFifoCounts(I2C_base, NULL, &txCount);
		}while (txCount);

		LPI2C_MasterSend(I2C_base, &cmd_buff[0], 2);
		LPI2C_MasterStop(I2C_base);
	}
}

void OLED_Init(LPI2C_Type *base) {
	I2C_base=base;
	// wait
	for(volatile int i=0; i<1000000; i++);

#if defined(SSD_1306)
	OLED_Write_Byte(0xAE, OLED_CMD);//--turn off oled panel
	OLED_Write_Byte(0x00, OLED_CMD);//--set low column address
	OLED_Write_Byte(0x10, OLED_CMD);//--set high column address
	OLED_Write_Byte(0x40, OLED_CMD);//--set start line address  Set Mapping RAM Display Start Line (0x00~0x3F)
	OLED_Write_Byte(0x20, OLED_CMD);//-Set Page Addressing Mode (0x00/0x01/0x02)
	OLED_Write_Byte(0x02, OLED_CMD);//
	OLED_Write_Byte(0x81, OLED_CMD);//--set contrast control register
	OLED_Write_Byte(0xCF, OLED_CMD);//--set SEG Output Current Brightness
	OLED_Write_Byte(0xA1, OLED_CMD);//--set SEG/Column Mapping
	OLED_Write_Byte(0xC8, OLED_CMD);//--set COM/Row Scan Direction (C0h / C8h)
	OLED_Write_Byte(0xA6, OLED_CMD);//--set normal display
	OLED_Write_Byte(0xA8, OLED_CMD);//--set multiplex ratio(1 to 64)
	OLED_Write_Byte(0x3F, OLED_CMD);//--set 1/64 duty
	OLED_Write_Byte(0xD3, OLED_CMD);//--set display offset	Shift Mapping RAM Counter (0x00~0x3F)
	OLED_Write_Byte(0x00, OLED_CMD);//-not offset
	OLED_Write_Byte(0xD5, OLED_CMD);//--set display clock divide ratio/oscillator frequency
	OLED_Write_Byte(0x80, OLED_CMD);//--set divide ratio, Set Clock as 100 Frames/Sec
	OLED_Write_Byte(0xD9, OLED_CMD);//--set pre-charge period
	OLED_Write_Byte(0xF1, OLED_CMD);//--set Pre-Charge as 15 Clocks & Discharge as 1 Clock
	OLED_Write_Byte(0xDA, OLED_CMD);//--set com pins hardware configuration
	OLED_Write_Byte(0x12, OLED_CMD);
	OLED_Write_Byte(0xDB, OLED_CMD);//--set vcomh
	OLED_Write_Byte(0x40, OLED_CMD);//--set VCOM Deselect Level
	OLED_Write_Byte(0x8D, OLED_CMD);//--set Charge Pump enable/disable
	OLED_Write_Byte(0x14, OLED_CMD);//--set(0x10) disable
	OLED_Write_Byte(0xA4, OLED_CMD);// Disable Entire Display On (0xa4/0xa5)
	OLED_Write_Byte(0xA6, OLED_CMD);// Disable Inverse Display On (0xa6/a7)

#endif

#if defined(SH_1106)
	OLED_Write_Byte(0xAE, OLED_CMD);//--turn off oled panel
	OLED_Write_Byte(0x02, OLED_CMD);//--set low column address
	OLED_Write_Byte(0x10, OLED_CMD);//--set high column address
	OLED_Write_Byte(0x40, OLED_CMD);//--set start line address  Set Mapping RAM Display Start Line (0x00~0x3F)
	OLED_Write_Byte(0xB0, OLED_CMD);//--set page address
	OLED_Write_Byte(0x81, OLED_CMD);//--set contrast control register
	OLED_Write_Byte(0xFF, OLED_CMD);//--set SEG Output Current Brightness
	OLED_Write_Byte(0xA1, OLED_CMD);//--set SEG/Column Mapping
	OLED_Write_Byte(0xC8, OLED_CMD);//--set COM/Row Scan Direction (C0h / C8h)
	OLED_Write_Byte(0xA8, OLED_CMD);//--set multiplex ratio(1 to 64)
	OLED_Write_Byte(0x3F, OLED_CMD);//--set 1/64 duty
	OLED_Write_Byte(0xD3, OLED_CMD);//--set display offset	Shift Mapping RAM Counter (0x00~0x3F)
	OLED_Write_Byte(0x00, OLED_CMD);//-not offset
	OLED_Write_Byte(0xD5, OLED_CMD);//--set display clock divide ratio/oscillator frequency
	OLED_Write_Byte(0x80, OLED_CMD);//--set divide ratio, Set Clock as 100 Frames/Sec
	OLED_Write_Byte(0xD9, OLED_CMD);//--set pre-charge period
	OLED_Write_Byte(0x1F, OLED_CMD);//--set Pre-Charge as 15 Clocks & Discharge as 1 Clock
	OLED_Write_Byte(0xDA, OLED_CMD);//--set com pins hardware configuration
	OLED_Write_Byte(0x12, OLED_CMD);
	OLED_Write_Byte(0xDB, OLED_CMD);//--set vcomh
	OLED_Write_Byte(0x40, OLED_CMD);//--set VCOM Deselect Level
	OLED_Write_Byte(0xAD, OLED_CMD);//--set Charge Pump enable/disable
	OLED_Write_Byte(0x8B, OLED_CMD);//--set external VCC

#endif

	OLED_Clear_Screen(0x00);
	OLED_Refresh_Gram();
	OLED_Display_On();
}

void OLED_Clear_Screen(uint8_t fill) {

	for (uint8_t i = 0; i < OLED_PAGES; i ++) {
		OLED_Write_Byte(0xB0 + i, OLED_CMD);
		__SET_COL_START_ADDR();
		for (uint8_t j = 0; j < OLED_WIDTH; j ++) {
			displayBuffer[j][i] = fill;
		}
	}
}

void OLED_Puts(uint8_t x, uint8_t y, char *text) {

	uint32_t n=0, m=0;;
	char c_offset;

	while(text[n]) {

		c_offset=text[n] - ' ';
		for(int j=0;j<5;j++) {
			for(int i=0;i<8;i++) {

				if(fontSystem5x8[j+(c_offset*5)] &  (1 << i))
					OLED_Draw_Point((m*6)+x+j, y+i, 1);
			}
		}
		n++;
		m++;
	}
}
